# hr-ai-assistant

./: .env.example  .gitignore  README.md  main.py  modal_app.py  pyproject.toml  requirements.txt
app/: agent.py  gui.py  ingest.py
app/tools/: employee_lookup.py  policy_search.py
scripts/: test_all.py
